<resources>
    <string name="app_name">MayTinh</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="BS">BS</string>
    <string name="chia">/</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="dautru">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="daucong">+</string>
    <string name="dâum">+/-</string>
    <string name="dauam">+/-</string>
    <string name="_0">0</string>
    <string name="dauphay">,</string>
    <string name="daubang">=</string>
    <string name="_7">7</string>
    <string name="CE">CE</string>
</resources>