<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#EAD0D0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="3"
        android:background="#fff"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/kq"

            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_marginTop="50dp"


            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#ECE8E8"
        >
        <Button
            android:layout_width="0dp"
            android:id="@+id/xoatoanhang"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/CE"
            android:textColor="#C54940"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText,NestedWeights" />
        <Button
            android:layout_width="0dp"
            android:id="@+id/xoapheptinh"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/c"
            android:textColor="#07630A"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText,NestedWeights" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/xoachuso"
            android:text="@string/BS"
            android:textColor="#07630A"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/dauchia"
            android:text="@string/chia"
            android:textColor="#07630A"
            android:textSize="40sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#ECE8E8"

        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_7"
            android:id="@+id/so7"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText,NestedWeights" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_8"
            android:id="@+id/so8"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_9"
            android:id="@+id/so9"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/x"
            android:id="@+id/daunhan"
            android:textColor="#07630A"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#ECE8E8"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_4"
            android:id="@+id/so4"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText,NestedWeights" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_5"
            android:id="@+id/so5"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_6"
            android:id="@+id/so6"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dautru"
            android:id="@+id/dautru"
            android:textColor="#07630A"
            android:textSize="60sp"

            tools:ignore="ButtonStyle,HardcodedText" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#ECE8E8"
        >

        <Button
            android:id="@+id/so1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText,NestedWeights" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_2"
            android:id="@+id/so2"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_3"
            android:id="@+id/so3"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/daucong"
            android:id="@+id/daucong"
            android:textColor="#07630A"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#ECE8E8"

        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dauam"
            android:id="@+id/dauam"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText,NestedWeights" />

        <Button
            android:id="@+id/so0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_0"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dauphay"
            android:id="@+id/dauphay"
            android:textColor="#000"
            android:textSize="40sp"
            tools:ignore="ButtonStyle,HardcodedText" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/daubang"
            android:id="@+id/daubang"
            android:textColor="#fff"
            android:textSize="40sp"
            android:background="#4DBD52"
            tools:ignore="ButtonStyle,HardcodedText" />

    </LinearLayout>




</LinearLayout>